new profile component

--- a/src/components/CharacterList/CharacterList.module.css
+++ b/src/components/CharacterList/CharacterList.module.css
@@ -3,5 +3,9 @@
     min-width: 100vw;
     overflow-x: hidden;
     background-color: red;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
 }
-
