--- a/src/components/CharacterList/CharacterList.module.css
+++ b/src/components/CharacterList/CharacterList.module.css
@@ -1,12 +1,18 @@
 .CharacterList {
-	min-height: 100vh;
-	min-width: 100vw;
-	overflow-x: hidden;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	width: 100%;
-	justify-content: center;
-	padding: 10px;
-	background: black;
+    min-height: 100vh;
+    min-height: 93.1vh;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 10px;
+    background: black;
+}
+
+.SearchBar {
+    padding-top: 10px;
+    display: flex;
+    justify-content: center;
+    background: black;
 }
